--- a/AID700-finalED.ipynb
+++ b/AID700-finalED.ipynb
@@ -307,7 +307,7 @@
    "source": [
     "from tensorflow.python.ops.numpy_ops import np_config\n",
     "np_config.enable_numpy_behavior()\n",
-    "def transfer_to_torch(data, type_specified=True):\n",
+    "def transfer_to_tensorflow(data, type_specified=True):\n",
     "        g = open('./dataset/' + dataset + '/global_labels', 'rb')\n",
     "        global_labels = pickle.load(g)\n",
     "        g.close()\n",
@@ -5440,7 +5440,7 @@
     "    losses = 0  \n",
     "    with tf.GradientTape(persistent=True) as tape:\n",
     "        for graph_pair in batch:\n",
-    "            data = transfer_to_torch(graph_pair)\n",
+    "            data = transfer_to_tensorflow(graph_pair)\n",
     "  \n",
     "            test = model(data, training=True)\n",
     "           # print(test)\n",
@@ -5460,7 +5460,7 @@
     "    for graph_2 in training_graphs:\n",
     "        if((graph_1.graph['gid'], graph_2.graph['gid']) in test_gt_ged):\n",
     "            curr_graph_pair = {'graph_pair': [graph_1, graph_2], 'ged':test_gt_ged[(graph_1.graph['gid'], graph_2.graph['gid'])]}\n",
-    "            data = transfer_to_torch(curr_graph_pair, type_specified=False)\n",
+    "            data = transfer_to_tensorflow(curr_graph_pair, type_specified=False)\n",
     "            prediction = model(data,training=False)\n",
     "            prediction = tf.math.exp(tf.math.reduce_sum(tf.math.log(prediction))).reshape(1, -1)\n",
     "            current_error = mse(prediction, data[\"gt_ged\"])\n",
@@ -5470,7 +5470,7 @@
     "    for graph_2 in testing_graphs:\n",
     "        if((graph_1.graph['gid'], graph_2.graph['gid']) in test_gt_ged):\n",
     "            curr_graph_pair = {'graph_pair': [graph_1, graph_2], 'ged':test_gt_ged[(graph_1.graph['gid'], graph_2.graph['gid'])]}\n",
-    "            data = transfer_to_torch(curr_graph_pair, type_specified=False)\n",
+    "            data = transfer_to_tensorflow(curr_graph_pair, type_specified=False)\n",
     "            prediction = model(data,training=False)\n",
     "            prediction = tf.math.exp(tf.math.reduce_sum(tf.math.log(prediction))).reshape(1, -1)\n",
     "            current_error = mse(prediction, data[\"gt_ged\"])\n",
